Bug 257546 - sheet support implemented incorrectly. r=peterv, sr=sfraser.