widget/public/nsIWidget.h
@@ -119,7 +119,9 @@ enum nsWindowType {     // Don't alter previously encoded enum values - 3rd part
   // plugin window
   eWindowType_plugin,
   // java plugin window
-  eWindowType_java
+  eWindowType_java,
+  // MacOSX sheet (special dialog class)
+  eWindowType_sheet
 };
 
 enum nsBorderStyle
@@ -151,9 +153,6 @@ enum nsBorderStyle
 
   // show the close button
   eBorderStyle_close    = 1 << 7,
-
-  // sheet hint (Mac OS X)
-  eBorderStyle_sheet    = 1 << 8,
 
   // whatever the OS wants... i.e. don't do anything
   eBorderStyle_default  = -1
